fixed z-index so modal shows on top of other elements

--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ margin-left: 50px;
 }
 
 .Modal {
-  position: absolute;
+  position: relative;
   top: 40px;
   left: 40px;
   right: 40px;
