--- a/src/components/css/headlines.css
+++ b/src/components/css/headlines.css
@@ -26,7 +26,7 @@
   color: #000000;
   text-align: left;
   font-size: 16px;
-  box-shadow: 9px 2px 18px rgba(0, 0, 0, 0.267);
+  box-shadow: 9px 2px 18px rgba(0, 0, 0, 0.534);
   height: 550px;
   border-radius: 17px;
 
@@ -57,6 +57,9 @@
     border-radius: 17px;
 
   }
+
+
+
 
 
 .figurecard  img {
@@ -103,7 +106,7 @@
   margin-left: 160px;
   margin-top: -10px;
   width: 100%;
-  z-index: 1;
+  z-index: 2;
   visibility: hidden;
 
 }
@@ -116,18 +119,7 @@
     background: linear-gradient(90deg, #700877 0%, #ff2759 100%, #ff2759 100%);
     opacity: 0.9;
     background-color:none;
-
 }
-
-.figurecard:hover figcaption {
-  background: -moz-linear-gradient(90deg, #700877 0%, #ff2759 100%, #ff2759 100%);
-  background: -webkit-linear-gradient(90deg, #700877 0%, #ff2759 100%, #ff2759 100%);
-  background: linear-gradient(90deg, #700877 0%, #ff2759 100%, #ff2759 100%);
-  opacity: 0.9;
-  background-color:none;
-
-}
-
 
 .figurecard:hover a{
     color: white;
@@ -158,6 +150,7 @@
 .topStories{
   border-bottom: 1px solid black;
   width: 85%;
+  text-transform: capitalize;
 }
 .deleteHeadline button{
 
